# cribserver

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  simulate_kitty.py
grok/: cat_for_grok.py  cribbage_rules.txt  grok_request.py  instructions.txt  rest_server.txt
src/python/cribserver/: api_model.py  cards.py  client.py  cribbage.py  generate_svg_board.py  server.py  simulate_kitty.py
static/: index.html  script.js  styles.css
tests/: test_cards.py  test_server_full_game.py  test_server_game_log.py
