[project]
name = "cribserver"
version = "0.1.0"
description = "A FastAPI-based server for a multiplayer Cribbage game over a household LAN"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "requests>=2.31.0",
]
optional-dependencies.test = [
    "pytest>=7.0.0",
]
[project.urls]
Homepage = "https://github.com/yourusername/cribserver"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
