[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cribserver"
version = "0.1.0"
description = "A FastAPI-based server for a multiplayer Cribbage game over a household LAN"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "requests>=2.31.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/yourusername/cribserver"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[project.scripts]
cribserver = "cribserver.server:run_server"
cribclient = "cribserver.client:run_client"

[tool.setuptools]
package-dir = { "" = "src/python" }
include-package-data = true
packages.find = { where = ["src/python"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v"
